--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.BitsAndPizzas" parent="android:Theme.Holo.Light">
+    <style name="Theme.BitsAndPizzas" parent="Theme.AppCompat.Light">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#00EE6B</item>
         <item name="colorPrimaryDark">@color/purple_700</item>
