--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,5 +17,11 @@
         android:orderInCategory="1"
         app:showAsAction="ifRoom"
         />
+    <item app:showAsAction="ifRoom"
+        android:id="@+id/action_share"
+        android:title="@string/action_share"
+        android:orderInCategory="2"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
+        />
 
 </menu>
